--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,16 @@
     <!-- React-native and React-share the React package -->
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
     <!-- <script src="app.js"></script> -->
-
+    <script>
+        // bad practice, temp. here purely for practicing reasons
+        const App = () => {
+            return React.createElement(
+                "div",
+                {},
+                React.createElement("h1", {}, "Adopt Me!")
+            );
+        };
+        ReactDOM.render(React.createElement(App), document.getElementById("root"));
+    </script>
 </body>
 </html>
