--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Adopt Me!</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root">not rendered</div>
     <!-- unpkg is a fast, global content delivery network for everything on npm. 
         Use it to quickly and easily load any file from any package using a URL like:-->
@@ -16,5 +16,5 @@
     <!-- React-native and React-share the React package -->
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
     <script src="App.js"></script>
-</body>
+  </body>
 </html>
