ading parcel; adding react & react-dom locally

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
     <div id="root">not rendered</div>
     <!-- unpkg is a fast, global content delivery network for everything on npm. 
         Use it to quickly and easily load any file from any package using a URL like:-->
-    <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
+    <!-- <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script> -->
     <!-- load DOM; render react into browser -->
     <!-- React-native and React-share the React package -->
-    <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
+    <!-- <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script> -->
+    <!-- removing scripts react and react-dom so now it runs locally -->
     <script src="App.js"></script>
   </body>
 </html>
